--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>This is elise website yeah yeah</h1>
+    <h1>hello</h1>
 
+    <div class="player"  id="track-0">
+      <div class="background-bar"></div>
+      <div class="progress-bar"></div>
+      <div class="play-pause">
+        <p>play</p>
+      </div>
+      <div class="title">
+        <p>G & More</p>
+      </div>
+      <audio src="tracks/gandmore.mp3"></audio>
+    </div>
+
+    <div class="player"  id="track-1">
+      <div class="background-bar"></div>
+      <div class="progress-bar"></div>
+      <div class="play-pause">
+        <p>play</p>
+      </div>
+      <div class="title">
+        <p>Romantics</p>
+      </div>
+      <audio src="tracks/romantics.mp3"></audio>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
