--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div id="playerWrapper">
         <div id="playButton">
-          <p>loading...</p>
+          <p>play</p>
           <br></br>
 
 
