skip tracks etc

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <audio id="track" src="tracks/DIVINA_ALL_FINALE.mp3" preload="auto" loop></audio>
       </div>
       <div id="textWrapper">
+        <p>DIVINA - Élise Massoni</p>
+        <br></br>
         <p>titles &darr;</p>
         <br></br>
         <br></br>
@@ -76,8 +78,30 @@
         <p class="trackName">10.17 - 11.49 • Paradis - Chant premier - Invocation - Sphère de feu</p>
         <p class="trackName">11.50 - 13.17 • Paradis - Chant VIII Sphère de Venus - Ames tendres</p>
         <p class="trackName">13.22 - 14.20 • Paradis - Chant des exiles</p>
-        <p class="trackName">13.22 - Fin     • Paradis - Chant XXXIII Prière à Marie - 3 cercles divins</p>
+        <p class="trackName">14.23 - Fin     • Paradis - Chant XXXIII Prière à Marie - 3 cercles divins</p>
+
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <p>Genos, 2021</p>
+        <p>Production: LeTransfoC2l’Art</p>
       </div>
+      <div id="skipWarning">
+        <p>
+          why skip tracks?
+          <br></br>
+          make the voyage once so you can decide where to end up
+          <br></br>
+          <br></br>
+          are you sure you want to skip tracks?
+          <a id="unlockSkipping">yes</a>
+        </p>
+
+      </div>
+
 
 
 
